---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] private.sh connect-ftp -v --username foo localhost"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mInvalid option: [33m-v[31m[0m


